--- a/upkook_web/static/site/css/styles.css
+++ b/upkook_web/static/site/css/styles.css
@@ -1,183 +1,185 @@
 @font-face {
-    font-family: 'Material Icons';
-    font-display: swap;
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/materialicons/v47/flUhRq6tzZclQEJ-Vdg-IuiaDsNa.eot); /* For IE6-8 */
-    src: local('Material Icons'),
-     local('MaterialIcons-Regular'),
-     url(https://fonts.gstatic.com/s/materialicons/v47/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2'),
-     url(https://fonts.gstatic.com/s/materialicons/v47/flUhRq6tzZclQEJ-Vdg-IuiaDsNa.woff) format('woff')
+  font-family: 'Material Icons';
+  font-display: swap;
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/materialicons/v47/flUhRq6tzZclQEJ-Vdg-IuiaDsNa.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+  local('MaterialIcons-Regular'),
+  url(https://fonts.gstatic.com/s/materialicons/v47/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2'),
+  url(https://fonts.gstatic.com/s/materialicons/v47/flUhRq6tzZclQEJ-Vdg-IuiaDsNa.woff) format('woff')
 
 }
-html{
-    scroll-behavior: smooth;
+
+html {
+  scroll-behavior: smooth;
 }
+
 .material-icons {
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;
-    line-height: 1;
-    letter-spacing: normal;
-    text-transform: none;
-    display: inline-block;
-    white-space: nowrap;
-    word-wrap: normal;
-    direction: ltr;
-    /* Support for all WebKit browsers. */
-    -webkit-font-smoothing: antialiased;
-    /* Support for Safari and Chrome. */
-    text-rendering: optimizeLegibility;
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
 
-    /* Support for Firefox. */
-    -moz-osx-font-smoothing: grayscale;
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
 
-    /* Support for IE. */
-    font-feature-settings: 'liga';
+  /* Support for IE. */
+  font-feature-settings: 'liga';
 }
 
 html, body, p, h1, h2, h3, h4, h5, h6, .md-btn {
-    font-family: iranyekan, Tahoma, sans-serif;
+  font-family: iranyekan, Tahoma, sans-serif;
 }
 
 html, body, p, ul, ol, .md-btn {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 a, a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 h1 {
-    font-size: 1.618rem;
+  font-size: 1.618rem;
 }
 
 h2 {
-    font-size: 1.4944rem;
+  font-size: 1.4944rem;
 }
 
 h3 {
-    font-size: 1.3708rem;
+  font-size: 1.3708rem;
 }
 
 h4 {
-    font-size: 1.2472rem;
+  font-size: 1.2472rem;
 }
 
 h5 {
-    font-size: 1.1236rem;
+  font-size: 1.1236rem;
 }
 
 h6 {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 h6, p {
-    line-height: 1.618rem;
+  line-height: 1.618rem;
 }
 
 /* HEADER */
 .mdl-layout__header {
-    background-color: white;
-    color: inherit;
-    box-shadow: none;
-    border-bottom: 1px solid rgba(151, 151, 151, 0.5)
+  background-color: white;
+  color: inherit;
+  box-shadow: none;
+  border-bottom: 1px solid rgba(151, 151, 151, 0.5)
 }
 
 .mdl-layout__header-row .mdl-navigation__link {
-    color: inherit;
+  color: inherit;
 }
 
 .mdl-layout__drawer {
-    z-index: 1000;
+  z-index: 1000;
 }
 
 #outer-wrapper .mdl-layout__drawer-button {
-    margin-left: 15px;
+  margin-left: 15px;
 }
 
 #outer-wrapper .mdl-layout__drawer-button .material-icons {
-    font-size: 3rem;
-    line-height: 3rem;
+  font-size: 3rem;
+  line-height: 3rem;
 }
 
 .mdl-menu__item {
-    text-align: right;
+  text-align: right;
 }
 
 .mdl-textfield {
-    width: 360px;
+  width: 360px;
 }
 
 .mdl-textfield__input {
-    font-family: iranyekan, Tahoma, sans-serif;
-    text-align: right;
+  font-family: iranyekan, Tahoma, sans-serif;
+  text-align: right;
 }
 
 .mdl-textfield__label {
-    text-align: right;
+  text-align: right;
 }
 
 .md-btn {
-    width: 360px;
-    height: 60px;
+  width: 360px;
+  height: 60px;
 }
 
 .md-btn--primary.md-btn--primary {
-    color: #FF5630;
+  color: #FF5630;
 }
 
 .md-btn--primary.md-btn--primary.md-btn--raised, .md-btn--primary.md-btn--primary.md-btn--fab {
-    background-color: #FF5630;
+  background-color: #FF5630;
 
 }
 
 .mdl-textfield--floating-label.is-focused .mdl-textfield__label,
 .mdl-textfield--floating-label.is-dirty .mdl-textfield__label,
 .mdl-textfield--floating-label.has-placeholder .mdl-textfield__label {
-    color: #FFAB00;
+  color: #FFAB00;
 }
 
 .mdl-textfield__label:after {
-    background-color: #FFAB00;
+  background-color: #FFAB00;
 }
 
 .mdl-snackbar {
-    left: auto;
-    right: 100%;
-    z-index: 2147483647;
+  left: auto;
+  right: 100%;
+  z-index: 2147483647;
 }
 
 .mdl-snackbar__text {
-    float: right;
-    text-align: right;
-    width: 100%;
-    font-family: iranyekan, Tahoma, sans-serif;
-    font-size: 0.8rem;
+  float: right;
+  text-align: right;
+  width: 100%;
+  font-family: iranyekan, Tahoma, sans-serif;
+  font-size: 0.8rem;
 }
 
 .mdl-snackbar--success,
 .mdl-snackbar--info,
 .mdl-snackbar--warning,
 .mdl-snackbar--error {
-    color: #FFFFFF;
+  color: #FFFFFF;
 }
 
 .mdl-snackbar--success {
-    background-color: #00875A;
+  background-color: #00875A;
 }
 
 .mdl-snackbar--info {
-    background-color: #2979FF;
+  background-color: #2979FF;
 }
 
 .mdl-snackbar--warning {
-    background-color: #FF8B00;
+  background-color: #FF8B00;
 }
 
 .mdl-snackbar--error {
-    background-color: #DE350B;
+  background-color: #DE350B;
 }
 
 .mini-footer-wrapper .md-gr {
@@ -196,16 +198,22 @@ h6, p {
 }
 
 .policies-footer-grid {
-    display: contents;
+  display: contents;
+}
+
+.mdl-layout {
+  overflow-x: unset;
+  overflow-y: unset;
 }
 
 /* Responsive */
 
 @media screen and (max-width: 1024px) {
-    .mdl-layout__header-row .mdl-navigation {
-        height: 64px;
-    }
+  .mdl-layout__header-row .mdl-navigation {
+    height: 64px;
+  }
 }
+
 @media screen and (max-width: 840px) {
   .mini-footer-wrapper img {
     width: 55px;
@@ -215,9 +223,9 @@ h6, p {
 }
 
 @media screen and (max-width: 479px) {
-    .mdl-snackbar--active {
-        right: 0;
-    }
+  .mdl-snackbar--active {
+    right: 0;
+  }
 }
 
 @media screen and (min-width: 480px) {
@@ -242,7 +250,7 @@ h6, p {
 }
 
 @media screen and (max-width: 414px) {
-    .md-btn {
-        width: 100%;
-    }
+  .md-btn {
+    width: 100%;
+  }
 }
